typescript/checker/tests/conformance/expressions/functionCalls/callWithSpread.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            134,
        ),
        hi: BytePos(
            135,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/functionCalls/callWithSpread.ts:8:5
  |
8 | var a: string[];
  |     ^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            152,
        ),
        hi: BytePos(
            153,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/functionCalls/callWithSpread.ts:9:5
  |
9 | var z: number[];
  |     ^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            170,
        ),
        hi: BytePos(
            173,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/functionCalls/callWithSpread.ts:10:5
   |
10 | var obj: X;
   |     ^^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            183,
        ),
        hi: BytePos(
            185,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/functionCalls/callWithSpread.ts:11:5
   |
11 | var xa: X[];
   |     ^^

